fix: fix splitpanel overflow

--- a/packages/root-cms/ui/components/SplitPanel/SplitPanel.css
+++ b/packages/root-cms/ui/components/SplitPanel/SplitPanel.css
@@ -1,6 +1,7 @@
 .SplitPanel {
   display: flex;
   height: calc(100vh - 48px);
+  width: calc(100vw - 48px);
 }
 
 .SplitPanel__divider {
